// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<InputSlider /> > Default story renders snapshot 1`] = `
<div
  style="height: 180px; margin-left: 20px; margin-top: 15px; width: 180px;"
>
  <span
    class="MuiSlider-root MuiSlider-marked MuiSlider-colorPrimary MuiSlider-sizeMedium embkalj0 css-1w488r-MuiSlider-root-StyledSlider"
  >
    <span
      class="MuiSlider-rail css-r64h58-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-xvk2i-MuiSlider-track"
      style="left: 0%; width: 75%;"
    />
    <span
      class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
      data-index="0"
      style="left: 0%;"
    />
    <span
      aria-hidden="true"
      class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-swtyag-MuiSlider-markLabel"
      data-index="0"
      style="left: 0%;"
    >
      0
    </span>
    <span
      class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
      data-index="1"
      style="left: 50%;"
    />
    <span
      aria-hidden="true"
      class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-swtyag-MuiSlider-markLabel"
      data-index="1"
      style="left: 50%;"
    >
      50
    </span>
    <span
      class="MuiSlider-mark css-lq5hqx-MuiSlider-mark"
      data-index="2"
      style="left: 100%;"
    />
    <span
      aria-hidden="true"
      class="MuiSlider-markLabel MuiSlider-markLabel css-1qb795b-MuiSlider-markLabel"
      data-index="2"
      style="left: 100%;"
    >
      100
    </span>
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-1xcmt9q-MuiSlider-thumb"
      data-index="0"
      style="left: 75%;"
    >
      <input
        aria-label="Input slider demo"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        data-index="0"
        max="100"
        min="0"
        step="5"
        style="border: 0px; clip: rect(0px); height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="75"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-valueLabelOpen MuiSlider-valueLabel css-1asissc-MuiSlider-valueLabel"
      >
        <span
          class="MuiSlider-valueLabelCircle"
        >
          <span
            class="MuiSlider-valueLabelLabel"
          >
            75
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`<InputSlider /> > RangeSlider story renders snapshot 1`] = `
<div
  style="height: 180px; margin-left: 20px; margin-top: 15px; width: 180px;"
>
  <span
    class="MuiSlider-root MuiSlider-marked MuiSlider-colorPrimary MuiSlider-sizeMedium embkalj0 css-1w488r-MuiSlider-root-StyledSlider"
  >
    <span
      class="MuiSlider-rail css-r64h58-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-xvk2i-MuiSlider-track"
      style="left: 15%; width: 70%;"
    />
    <span
      class="MuiSlider-mark css-lq5hqx-MuiSlider-mark"
      data-index="0"
      style="left: 0%;"
    />
    <span
      aria-hidden="true"
      class="MuiSlider-markLabel MuiSlider-markLabel css-1qb795b-MuiSlider-markLabel"
      data-index="0"
      style="left: 0%;"
    >
      0
    </span>
    <span
      class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
      data-index="1"
      style="left: 50%;"
    />
    <span
      aria-hidden="true"
      class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-swtyag-MuiSlider-markLabel"
      data-index="1"
      style="left: 50%;"
    >
      50
    </span>
    <span
      class="MuiSlider-mark css-lq5hqx-MuiSlider-mark"
      data-index="2"
      style="left: 100%;"
    />
    <span
      aria-hidden="true"
      class="MuiSlider-markLabel MuiSlider-markLabel css-1qb795b-MuiSlider-markLabel"
      data-index="2"
      style="left: 100%;"
    >
      100
    </span>
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-1xcmt9q-MuiSlider-thumb"
      data-index="0"
      style="left: 15%;"
    >
      <input
        aria-label="Minimum value"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="15"
        data-index="0"
        max="100"
        min="0"
        step="5"
        style="border: 0px; clip: rect(0px); height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="15"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-valueLabelOpen MuiSlider-valueLabel css-1asissc-MuiSlider-valueLabel"
      >
        <span
          class="MuiSlider-valueLabelCircle"
        >
          <span
            class="MuiSlider-valueLabelLabel"
          >
            15
          </span>
        </span>
      </span>
    </span>
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-1xcmt9q-MuiSlider-thumb"
      data-index="1"
      style="left: 85%;"
    >
      <input
        aria-label="Maximum value"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="85"
        data-index="1"
        max="100"
        min="0"
        step="5"
        style="border: 0px; clip: rect(0px); height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="85"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-valueLabelOpen MuiSlider-valueLabel css-1asissc-MuiSlider-valueLabel"
      >
        <span
          class="MuiSlider-valueLabelCircle"
        >
          <span
            class="MuiSlider-valueLabelLabel"
          >
            85
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;
